cue.mod/gen/github.com/argoproj/argo-cd/josh/networking.k8s.io_v1_ingress_argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/name: argo
  name: argocd
  namespace: argocd
spec:
  ingressClassName: external-nginx
  rules:
  - host: argocd.joshcorp.co
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - argocd.joshcorp.co
    secretName: argocd-joshcorp-tls
